# cortex-dispatcher

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cortex.yaml  docker-compose.yml  renovate.json  sonar-project.properties
core/: Cargo.toml
core/migrations/: V1__init.sql
core/src/: error.rs  lib.rs  schema.sql  sftp_connection.rs
dev-conf/: cortex-dispatcher.yml.tmpl
dev-conf/data-generator/: Dockerfile
dev-stack/: Cargo.toml
dev-stack/data-generator/: Dockerfile
dev-stack/src/: dev_stack.rs  lib.rs
dispatcher/: Cargo.toml
dispatcher/src/: base_types.rs  directory_source.rs  directory_target.rs  dispatcher.rs  local_storage.rs  main.rs  persistence.rs  settings.rs  sftp_command_consumer.rs  sftp_downloader.rs
dispatcher/src/commands/: dev_stack.rs  mod.rs  service.rs
docs/: configuration.rst
integration-tests/: Cargo.toml  postgresql.conf
integration-tests/src/: dev_stack.rs  lib.rs  smoke.rs
sftp-scanner/: Cargo.toml
sftp-scanner/src/: amqp_sender.rs  main.rs  settings.rs  sftp_scanner.rs
