[package]
name = "cortex-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ssh2 = "0.9"
log = "0.4"
anyhow = "1.0"
tokio-postgres = "0.7"
thiserror = "1.0"
