[package]
name = "cortex-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
ssh2 = "0.9"
log = "0.4"
anyhow = "1.0"
thiserror = "2.0"
rusqlite = { version = "0.37", features = ["bundled"] }
refinery = { version = "0.9", features = ["rusqlite"] }

[lib]
test = false
doctest = false
