[package]
name = "dev-stack"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "dev_stack"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
rustls = "0.23"
rustls-native-certs = "0.8"
tokio-postgres-rustls = "0.12"
postgres-types = { version = "0.2", features = ["derive"] }
predicates = "3.1"
rand = "0.8"
tempfile = "3.10"
reqwest = { version = "0.12", features = ["json"] }
testcontainers = "0.22"
url = "2.5"
log = "0.4"
thiserror = "1.0"
libc = "0.2.158"
