[package]
name = "dev-stack"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "dev_stack"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
predicates = "3.1"
rand = "0.9"
tempfile = "3.10"
reqwest = { version = "0.13", features = ["json"] }
testcontainers = "0.26"
url = "2.5"
log = "0.4"
thiserror = "1.0"
libc = "0.2.158"
