[package]
name = "dev-stack"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "dev_stack"
test = false
doctest = false

[dependencies]
tokio = { version = "1.38", features = ["full"] }
rand = "0.10"
testcontainers = "0.27"
url = "2.5"
thiserror = "2.0"
