[package]
name = "cortex-dispatcher"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = """
Cortex is system for efficiently collecting and distributing files with a
choice of multiple protocols
"""
documentation = "https://cortex-dispatcher.readthedocs.io/en/latest/"
homepage = "https://github.com/hendrikx-itc/cortex-dispatcher"
repository = "https://github.com/hendrikx-itc/cortex-dispatcher"

[package.metadata.deb]
section = "misc"
assets = [
    ["target/release/cortex-dispatcher", "/usr/bin/", "755"],
]

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.11"

[dependencies]
dev-stack = { version = "*", path = "../dev-stack" }
log = "0.4"
env_logger = "0.11.9"
serde = { version = "1.0", features = ["derive"] }
config = "0.15"
regex = "1.6"
serde_regex = "1.1"
clap = { version = "4.5", features = ["cargo", "derive"] }
ssh2 = "0.9"
futures = "0.3"
deadpool-lapin = "0.13"
tokio = { version = "1.39", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
serde_json = "1.0"
serde_yaml_ng = "0.10.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.11.0"
io_tee = "0.1.1"
prometheus = { version = "0.14" }
lazy_static = "1.4"
cortex-core = { path = "../core" }
crossbeam-channel = "0.5"
tera = "1.20.1"
signal-hook = { version = "0.4" }
signal-hook-tokio = { version = "0.4", features = ["futures-v0_3"] }
retry = "2.0"
proctitle = "0.1"
stream-reconnect = { version = "0.3", default-features = false, features = ["tokio"] }
async-channel = "2.0"
flate2 = "1.0"
url = "2.5"
rustls = { version = "0.23", features = ["ring"] }
rusqlite = { version = "0.37", features = ["bundled"] }
