[package]
name = "integration-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Cortex Dispatcher integration tests"

[dependencies]
dev-stack = { version = "*", path = "../dev-stack" }
tokio = { version = "1.38", features = ["full"] }
assert_cmd = "2.1.2"
predicates = "3.1"
tempfile = "3.10"
url = "2.5"

[lib]
doctest = false
